added stars to review

--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/home.css">
     <link rel="stylesheet" href="./CSS/menu-footer.css">
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        .checked {
+            color: orange;
+        }
+    </style>
     <title>Tissues | Home</title>
 </head>
 <body>
@@ -31,8 +38,10 @@
    <main>
     <!--Header-->
         <section class="container">
-            <h1 class="showcase" id="top">Welcome to Tissues</h1>
-            <h2 class="showcase">Tissue boxes that look like your favourite animals</h2>
+            <div id="showcase">
+                <h1 id="top">Welcome to Tissues</h1>
+                <h2 >Tissue boxes that look like your favourite animals</h2>
+            </div>
         </section>
 
     <!--Section B-->
@@ -47,29 +56,57 @@
 
     <!--Testimonials-->
     <div id="testimonials">
-    <section id="box">
+        <section class="box">
 
-        <div class="review">
-            <h3>Anonymous</h3>
-            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptatibus neque quaerat, modi reprehenderit ea, autem deserunt porro inventore eius assumenda, asperiores nulla non culpa unde. A, in officia."
-            </p>
-        </div>
-        <div class="review">
-            <h3>Anonymous</h3>
-            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium aliquid natus ipsum reiciendis deleniti aperiam nostrum hic totam minus dolorum nemo, fuga saepe aut vel enim, minima, officiis amet."
-            </p>
-        </div>
-        <div class="review">
-            <h3>Anonymous</h3>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, nisi quibusdam. Blanditiis omnis architecto delectus velit doloribus tenetur culpa qui magnam iusto numquam aspernatur in?"
-            </p>
-        </div>
-        <div class="review">
-            <h3>Anonymous</h3>
-            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quasi nobis animi modi hic ut quia delectus dolorem, magnam, saepe nihil atque excepturi ab veniam, cum beatae autem iusto ad?"
-            </p>
-        </div>     
-    <section>
+            <div class="review">
+                <h3>Anonymous</h3>
+                <div class="stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                </div>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab itaque voluptatibus neque quaerat, modi reprehenderit ea, autem deserunt porro inventore eius assumenda, asperiores nulla non culpa unde. A, in officia."
+                </p>
+            </div>
+            <div class="review">
+                <h3>Anonymous</h3>
+                <div class="stars">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laudantium aliquid natus ipsum reiciendis deleniti aperiam nostrum hic totam minus dolorum nemo, fuga saepe aut vel enim, minima, officiis amet."
+                </p>
+            </div>
+            <div class="review">
+                <h3>Anonymous</h3>
+                <div class="stars">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, nisi quibusdam. Blanditiis omnis architecto delectus velit doloribus tenetur culpa qui magnam iusto numquam aspernatur in?"
+                </p>
+            </div>
+            <div class="review">
+                <h3>Anonymous</h3>
+                <div class="stars">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                </div>
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quasi nobis animi modi hic ut quia delectus dolorem, magnam, saepe nihil atque excepturi ab veniam, cum beatae autem iusto ad?"
+                </p>
+            </div>     
+        <section>
     </div>
     
    </main>
