--- a/Responsive Website Project/about.html
+++ b/Responsive Website Project/about.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <!-- Header-->
+    <!-- Page Header-->
     <section id="container">
         <div id="header-page">
             <h1>ABOUT TISSUES</h1>
@@ -81,8 +81,6 @@
     </section>
     </div>
     
-
-
     
     <!--Footer-->
     <footer id="main-footer" class="grid">
