--- a/Responsive Website Project/contact.html
+++ b/Responsive Website Project/contact.html
@@ -30,13 +30,13 @@
 
 
     
-    <!--Header-->
+    <!--Page Header-->
         <section id="header-page">
             <h1>Contact Us</h1>
         </section>
 
     
-    <section id="section-b">
+    <section id="filler">
         <p>We are here to help. Visit our <a class="faq-link" href="faq.html">FAQ page</a> or contact us here if you have any questions.</p>
         <h4>Support Us On Social Media</h4>
         <div class="social-media">
