--- a/Responsive Website Project/index.html
+++ b/Responsive Website Project/index.html
@@ -35,8 +35,9 @@
         </nav>
     </header>
     
-   <main>
-    <!--Header-->
+   
+
+    <!--Page Header-->
         <section class="container">
             <div id="showcase">
                 <h1 id="top">Welcome to Tissues</h1>
@@ -44,9 +45,8 @@
             </div>
         </section>
 
-    <!--Section B-->
-    <div id="section-b">
-        <section>
+    <!--Filler Text-->
+        <section id="filler">
             <h1>Customers Love Our Brand</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quidem, veritatis nostrum quibusdam animi, possimus officia deleniti praesentium aut tempora perferendis hic enim facere obcaecati necessitatibus voluptate consequuntur autem placeat.
             </p>
@@ -107,11 +107,9 @@
                 </p>
             </div>     
         <section>
-    </div>
-    
-   </main>
-   
-</section>
+    </div>  
+
+
 <!--Form-->
 <section id="newsletter">
     <h3>Subscribe To Our Newsletter</h3>
