--- a/Responsive Website Project/products.html
+++ b/Responsive Website Project/products.html
@@ -7,17 +7,6 @@
     <link rel="stylesheet" href="./CSS/products.css">
     <link rel="stylesheet" href="./CSS/menu-footer.css">
     <title>Tissues | Products</title>
-    <script>
-        function switchEl(id){
-            document.querySelector('#'+id).style.display = 'none';
-            document.querySelector('#'+id+'-alt').style.display = 'inline';
-        }
-
-        function switchBack(id) {
-                document.querySelector('#' + id).style.display = 'inline';
-                document.querySelector('#' + id + '-alt').style.display = 'none';
-            }
-    </script>
 </head>
 <body>
     <!--Navbar-->
@@ -38,32 +27,12 @@
             </ul>
         </nav>
     </header>
-    <!--Header-->
-    
+
+
+    <!--Page Header-->
     <section class="header-page">
         <h1>Our Products</h1>
     </section>
-
-    <!--Products-->
-     <!--<div class="main">
-        <section class="products">
-        <div class="product" onmouseover="switchEl('cat');" onmouseout="switchBack('cat');">
-            <div><img id="cat" src="./images/cat.png"><img id="cat-alt" src="./images/cat-alternate.png"></div>
-        </div>
-        <div class="product" onmouseover="switchEl('el');" onmouseout="switchBack('el');">
-            <div id="elephant"><img id="el" src="./images/elephant.png"><img id="el-alt" src="./images/elephant-alternate.png"></div>
-        </div>
-        <div class="product-name">Cat Tissue Cover <br> $20</div>
-        <div class="product-name">Elephant Tissue Cover <br> $20</div>
-        <div class="product" onmouseover="switchEl('cat1');" onmouseout="switchBack('cat1');">
-            <div><img id="cat1" src="./images/cat1.png"><img id="cat1-alt" src="./images/cat1-alternate.png"></div>
-        </div>
-        <div class="product" onmouseover="switchEl('panda');" onmouseout="switchBack('panda');">
-            <div id="panda"><img id="panda" src="./images/panda.png"><img id="panda-alt" src="./images/panda-alternate.png"></div>
-            </div>
-        <div class="product-name">Orange Cat Tissue Cover <br> $20</div>
-        <div class="product-name">Panda Tissue Cover <br>$20</div>
-    </section></div> -->
 
     <div class="main">
             <section class="products">
@@ -84,7 +53,7 @@
                 <div class="product-name">Panda Tissue Cover <br><div class="price">$20</div></div>
             </div>
         </section>
-        </div>
+    </div>
 
     
     <!--Footer-->
