--- a/Sports Statistics Application/admin.html
+++ b/Sports Statistics Application/admin.html
@@ -4,7 +4,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
     <title>Admin | NBA</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="">
+          <img src="./nbaLogo.png" height="500" width="100" />
+        </a>
+
+        <a
+          role="button"
+          class="navbar-burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navbarBasicExample"
+        >
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item"> Standings </a>
+
+          <a class="navbar-item"> Teams </a>
+
+          <a class="navbar-item"> Games </a>
+
+          <a class="navbar-item">
+            Admin
+            <!--input games-->
+          </a>
+
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link"> Teams </a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item"> Atlanta Hawks </a>
+              <a class="navbar-item"> Boston Celtics </a>
+              <a class="navbar-item"> Chicago Bulls </a>
+              <a class="navbar-item"> Charlotte Hornets </a>
+              <a class="navbar-item"> Brooklyn Nets </a>
+              <a class="navbar-item"> Cleveland Cavaliers </a>
+              <a class="navbar-item"> Maimi Heat </a>
+              <a class="navbar-item"> New York Knicks </a>
+              <a class="navbar-item"> Detriot Pistons </a>
+              <a class="navbar-item"> Orlando Magic </a>
+              <a class="navbar-item"> Philadelphia 76ers </a>
+              <a class="navbar-item"> Indiana Pacers </a>
+              <a class="navbar-item"> Washington Wizards </a>
+              <a class="navbar-item"> Toronto Raptors </a>
+              <a class="navbar-item"> Milwaukee Bucks </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div>
+      <form>
+        <label>Team 1</label>
+        <input type="text" id="team1" />
+        <label>Team 2</label>
+        <input type="text" id="team2" />
+        <label>Score 1</label>
+        <input type="number" id="score1" />
+        <label>Score 2</label>
+        <input type="number" id="score2" />
+        <button onclick="store()">Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
